# checkers

./: .gitignore  CMakeLists.txt  README.md
app/: board.cpp  board.hpp  checkers_commons.hpp  piece.cpp  piece.hpp  position.cpp  position.hpp  position_validator.cpp  position_validator.hpp
tests/: CMakeLists.txt  gtests_board.cpp  gtests_main.cpp  gtests_piece.cpp
